[workspace]
resolver = "2"
members = ["openapi"]

[package]
name = "eveonline-esi"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.8"
tokio = { version = "1.46.1", features = ["tracing"] }
openapi = { path = "./openapi" }