[package]
name = "eveonline_esi_openapi"
version = "1.33.0"
authors = ["OpenAPI Generator team and contributors", "ZeroDegress <zerodegress@outlook.com>"]
description = "An OpenAPI for EVE Online"
# Override this license by providing a License Object in the OpenAPI.
license = "LGPL-3.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
